<resources>
    <string name="app_name">Restel</string>
    <string name="welcome">خوش آمدید</string>
    <string name="hintUserName">نام کاربری</string>
    <string name="hintPassword">رمز عبور</string>
    <string name="successDbTransaction">تغییرات با درستی اعمال شد</string>
    <string name="unSuccessFbTransaction">خطایی رخ داده است. لطفا دوباره سعی کنید.</string>
    <string name="loginText">ورود</string>
    <string name="recoveryPassword">بازیابی رمز عبور</string>
    <string name="errorLoginUsername">نام کاربری نباید خالی باشد</string>
    <string name="errorLoginPassword">رمز عبور نباید خالی باشد</string>
    <string name="successLogin">خوش آمدید</string>
    <string name="unsuccessLogin">از درست بودن رمز و نام کاربری اطمینان حاصل فرمایید.</string>
    <string name="DatabaseError">خطایی در پایگاه داده روی داده است</string>
    <string name="clients">کارمندان</string>
    <string name="room">اتاق</string>
    <string name="passenger">مسافران</string>
    <string name="settings">تنظیمات</string>
    <string name="profile">پروفایل</string>
    <string name="contactUs">تماس با ما</string>
    <string name="logOut">خروج از حساب کاربری</string>
    <string name="price">قیمت اتاق:</string>
    <string name="roomNumber">شماره ی اتاق:</string>
    <string name="client">نام کارمند:</string>
    <string name="customer">نام مشتری:</string>
    <string name="underConstruction">در حال ساخت</string>
    <string name="newReserve">رزرو جدید</string>
    <string name="roomHint">شماره ی اتاق</string>
    <string name="userHint">نام مشتری</string>
    <string name="customerHint">نام مشتری</string>
    <string name="dateHint">انتخاب تاریخ</string>
    <string name="lastDateHint">تاریخ پایان</string>
    <string name="priceHint">قیمت اتاق</string>
    <string name="submit">ثبت</string>
    <string name="emptyEditText">مقداری این فیلد نباید خالی باشد</string>
    <string name="successTransaction">با موفقیت اضافه شد</string>
    <string name="unsuccessTransaction">از صحت اطلاعات وارد شده اطمینان حاصل کنید</string>
    <string name="firstName">نام:</string>
    <string name="lastName">نام خانوادگی:</string>
    <string name="phoneNumber">شماره تلفن:</string>
    <string name="capacity">ظرفیت:</string>
    <string name="gender">جنسیت:</string>
    <string name="married">وضعیت تاهل:</string>
    <string name="bottomSheetDescription">show Bottom Sheet</string>
    <string name="firstNameHint">نام</string>
    <string name="lastNameHint">نام خانوادگی</string>
    <string name="userPhoneHint">شماره تماس</string>
    <string name="userName">نام کاربری</string>
    <string name="userPassHint">رمز عبور</string>
    <string name="userRePassHint">تکرار رمز عبور</string>
    <string name="userAddressHint">آدرس</string>
    <string name="capacityHint">ظرفیت اتاق</string>
    <string name="userNationalHint">شماره ی ملی</string>
    <string name="edit">ویرایش</string>
    <string name="cancel">انصراف</string>
    <string name="delete">حذف شد</string>
    <string name="single">مجرد</string>
    <string name="marry">متاهل</string>
    <string name="male">مرد</string>
    <string name="female">زن</string>
    <string name="search">جست و جو کنید</string>
    <string name="aboutUs">این اپلیکیشن برای پروژه ی درس مهندسی نرم افزار توسط دانشجویان: \n
        1-مؤمن حمه ویسی 9717023118 \n
        2-امیر ولی محمدی 9717023166 \n
        3- هژیر غفوری 9717023139 \n
        انجام شده است.
    </string>
    <string name="callUs">call us</string>
    <string name="admin">ادمین</string>
    <string name="user">کارمند</string>
    <string name="adminsRight">سطح دسترسی کاربر</string>
    <string name="passwordRecovery">بازیابی رمز عبور</string>
    <string name="successRecoveryPassword">تغییر رمز عبور با موفقیت انجام شد\n
    رمز عبور جدید شما:1234</string>

    <string name="title">رزرو</string>
    <string name="chooseLanguage">انتخاب زبان</string>
    <string name="aboutApp">نرم افزار مدیریت رزرواسیون مهمانسرا</string>
    <string name="emptyCustomer">مشتری وجود ندارد</string>
    <string name="emptyRoom">اتاقی وجود ندارد</string>

    <string name="disableDelete">این داده در رزرواسیون استفاده شده است. امکان حذف آن وجود ندارد</string>
    <string name="roomFillError">اتاق برای تاریخ مورد نظر رزرو شده است.لطفا دوباره سعی کنید</string>
</resources>