<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetCustomer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:contentDescription="@string/bottomSheetDescription"
            android:gravity="center"
            app:srcCompat="@drawable/ic_line" />

        <TextView
            style="@style/EditTextHint"
            android:layout_marginTop="8dp"
            android:text="@string/firstNameHint" />

        <EditText
            android:id="@+id/customerNameEt"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            style="@style/EditTextHint"
            android:layout_marginTop="8dp"
            android:text="@string/userPhoneHint" />

        <EditText
            android:id="@+id/phoneNumberEt"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:inputType="phone"
            tools:ignore="LabelFor" />

        <TextView
            style="@style/EditTextHint"
            android:layout_marginTop="8dp"
            android:text="@string/userNationalHint" />

        <EditText
            android:id="@+id/customerNationalEt"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            tools:ignore="LabelFor" />


        <TextView
            style="@style/EditTextHint"
            android:layout_marginTop="8dp"
            android:text="@string/married" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/customerSingle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/single" />

            <RadioButton
                android:id="@+id/customerMarried"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/marry" />

        </RadioGroup>

        <TextView
            style="@style/EditTextHint"
            android:layout_marginTop="8dp"
            android:text="@string/gender" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/customerMale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/customerFemale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />

        </RadioGroup>

        <Button
            android:id="@+id/submitBtn"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="32dp"
            android:padding="0dp"
            android:text="@string/submit" />
    </LinearLayout>


</ScrollView>