<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetReserve"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:contentDescription="@string/bottomSheetDescription"
            android:gravity="center"
            app:srcCompat="@drawable/ic_line" />

        <TextView
            android:id="@+id/roomHint"
            style="@style/EditTextHint"
            android:text="@string/roomHint" />

        <TextView
            android:id="@+id/reserveRoom"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/customerHint"
            style="@style/EditTextHint"
            android:layout_marginTop="16dp"
            android:text="@string/userHint" />

        <TextView
            android:id="@+id/reserveCustomer"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/firstDateHint"
            style="@style/EditTextHint"
            android:layout_marginTop="16dp"
            android:text="@string/dateHint" />

        <TextView
            android:id="@+id/reserveDate"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="2" />

        <TextView
            android:id="@+id/priceHint"
            style="@style/EditTextHint"
            android:layout_marginTop="16dp"
            android:text="@string/priceHint" />

        <EditText
            android:id="@+id/reservePrice"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            tools:ignore="LabelFor,TextFields" />

        <Button
            android:id="@+id/reserveSubmit"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_marginVertical="32dp"
            android:padding="0dp"
            android:text="@string/submit" />
    </LinearLayout>


</ScrollView>