<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetForgetPass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:contentDescription="@string/bottomSheetDescription"
            android:gravity="center"
            app:srcCompat="@drawable/ic_line" />

        <TextView
            style="@style/EditTextHint"
            android:layout_marginTop="8dp"
            android:text="@string/userName" />

        <EditText
            android:id="@+id/userName"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            style="@style/EditTextHint"
            android:layout_marginTop="8dp"
            android:text="@string/userNationalHint" />

        <EditText
            android:id="@+id/userNationalCode"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="10"
            tools:ignore="LabelFor" />

        <TextView
            style="@style/EditTextHint"
            android:layout_marginTop="8dp"
            android:text="@string/userPhoneHint" />

        <EditText
            android:id="@+id/userPhoneNumber"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="11"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/submitBtn"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_marginVertical="32dp"
            android:padding="0dp"
            android:text="@string/passwordRecovery" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>