<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetRoom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:contentDescription="@string/bottomSheetDescription"
            android:gravity="center"
            app:srcCompat="@drawable/ic_line" />

        <TextView
            android:id="@+id/roomNameHint"
            style="@style/EditTextHint"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/roomHint" />

        <EditText
            android:id="@+id/roomNameEt"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:maxLength="3"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/capacityHint"
            style="@style/EditTextHint"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/capacityHint" />

        <EditText
            android:id="@+id/capacityEt"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:maxLength="1" />

        <TextView
            android:id="@+id/priceHint"
            style="@style/EditTextHint"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/priceHint" />

        <EditText
            android:id="@+id/priceEt"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/submitBtn"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="32dp"
            android:padding="0dp"
            android:text="@string/submit" />
    </LinearLayout>


</ScrollView>