<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginGuidTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginGuidBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginGuidEnd"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/dana_bold"
        android:text="@string/welcome"
        android:textColor="@color/whiteTextColor"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/loginGuidTop"
        app:layout_constraintEnd_toEndOf="@id/loginGuidEnd" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginConstraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_login_constraint"
        app:layout_constraintBottom_toBottomOf="@id/loginGuidBottom"
        app:layout_constraintTop_toBottomOf="@id/loginGuidTop"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginConstraintGuidTop"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginConstraintGuidStart"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginConstraintGuidEnd"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.93" />

        <EditText
            android:id="@+id/loginUserName"
            style="@style/LoginEditText"
            android:hint="@string/hintUserName"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@id/loginConstraintGuidEnd"
            app:layout_constraintStart_toStartOf="@id/loginConstraintGuidStart"
            app:layout_constraintTop_toBottomOf="@id/loginConstraintGuidTop" />

        <EditText
            android:id="@+id/loginPassword"
            style="@style/LoginEditText"
            android:layout_marginTop="20dp"
            android:hint="@string/hintPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/loginConstraintGuidEnd"
            app:layout_constraintStart_toStartOf="@id/loginConstraintGuidStart"
            app:layout_constraintTop_toBottomOf="@id/loginUserName"
            app:passwordToggleEnabled="true" />


        <Button
            android:id="@+id/loginBtn"
            style="@style/CustomButton"
            android:layout_marginTop="40dp"
            android:text="@string/loginText"
            app:layout_constraintEnd_toEndOf="@id/loginConstraintGuidEnd"
            app:layout_constraintStart_toStartOf="@id/loginConstraintGuidStart"
            app:layout_constraintTop_toBottomOf="@id/loginPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        style="@style/CustomTextView"
        android:layout_marginBottom="16dp"
        android:text="@string/recoveryPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/loginGuidEnd" />

</androidx.constraintlayout.widget.ConstraintLayout>